--- a/src/Custom.css
+++ b/src/Custom.css
@@ -2,7 +2,7 @@
   text-align: center;
 }
 
-.blockA {
+.box {
   display: inline-block;
   vertical-align: top;
   text-align: center;
@@ -14,41 +14,9 @@
   color: black;
 }
 
-.blockB {
-  display: inline-block;
-  vertical-align: top;
+div, span {
   text-align: center;
-  margin-top: 30px;
-  margin-left: 10px;
-  width: 115px;
-  height: 115px;
-  background-color: #f58b8b;
-  color: black;
-  font-weight: 10px;
-}
-
-.blockC {
   display: inline-block;
-  vertical-align: top;
-  text-align: center;
-  margin-top: 30px;
-  margin-left: 10px;
-  width: 115px;
-  height: 115px;
-  background-color: #fbf583;
-  color: black;
-}
-
-.blockD {
-  display: inline-block;
-  vertical-align: top;
-  text-align: center;
-  margin-top: 30px;
-  margin-left: 10px;
-  width: 115px;
-  height: 115px;
-  background-color: #8de1fd;
-  color: black;
 }
 
 .rightIcon {
